--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -30,7 +30,6 @@ android {
 
 dependencies {
 
-
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -38,7 +37,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.ebanx:swipe-button:0.4.0'
-
-
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
 }
